--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "prop-types": "latest",
     "query-string": "^6.8.3",
     "react": "^16.8.6",
