--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
