--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
